--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.3",
+    "express-validator": "^6.14.0",
     "fs": "0.0.1-security",
     "nodemon": "^2.0.15",
     "pug": "^3.0.2",
